Adecuaciones README